Update assets name in index.html

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <div class="col-lg-4">
                         <div class="team-member">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#teacherSteve">
-                                <img class="mx-auto rounded-circle" src="assets/img/team/Steven.jpg" alt="..." />
+                                <img class="mx-auto rounded-circle" src="assets/img/team/steven.jpg" alt="..." />
                             </a>
                             <h4>Steven Tu</h4>
                         </div>
@@ -99,7 +99,7 @@
                     <div class="col-lg-4">
                         <div class="team-member">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#teacherAmy">
-                                <img class="mx-auto rounded-circle" src="assets/img/team/Amy.jpg" alt="..." />
+                                <img class="mx-auto rounded-circle" src="assets/img/team/amy.jpg" alt="..." />
                             </a>
                             <h4>Amy Yang</h4>
                         </div>
@@ -107,7 +107,7 @@
                     <div class="col-lg-4">
                         <div class="team-member">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#teacherYu">
-                                <img class="mx-auto rounded-circle" src="assets/img/team/Yu.jpg" alt="..." />
+                                <img class="mx-auto rounded-circle" src="assets/img/team/yu.jpg" alt="..." />
                             </a>
                             <h4>Yu Liu</h4>
                         </div>
@@ -137,7 +137,7 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <h2 class="text-uppercase">Steve Tu</h2>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/team/Steven.jpg" alt="..." style="width: 400px; height: 400px" />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/team/steven.jpg" alt="..." style="width: 400px; height: 400px" />
                                     <p>I am an experienced software engineer with a strong interest in Open-Source, and a passion for computer gaming. My journey into programming began by exploring and analyzing other people's scripts to enhance my gaming experience. This fascination led me to develop my own scripts for online games. During my time at university, I pursued Computer Science, specializing in Machine Learning, and completed both my Bachelor's and Master's theses in this field.</p>
                                     <p>My professional career began as a software engineer specializing in test automation for mobile security applications. I found great satisfaction in witnessing the automation process efficiently complete tasks. Recently, I had the opportunity to work with an autonomous driving company, where I played a key role in deployingand overseeing their infrastructure.</p>
                                     <p>I thoroughly enjoy working with Java and Python and find programming incredibly rewarding. Now, I am thrilled at the prospect of sharing my knowledge and experience with junior programmers. As your coding buddy, I aim to inspire and guide the next generation of programmers, fostering love for coding and empowering them to excel in their programming journey.</p>
@@ -158,7 +158,7 @@
                                 <div class="modal-body">
                                     <!-- Project details -->
                                     <h2 class="text-uppercase">Amy Yang</h2>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/team/Amy.jpg" alt="..." style="width: 400px; height: 400px" />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/team/amy.jpg" alt="..." style="width: 400px; height: 400px" />
                                     <p>Hi there! My name is Amy. I'm a coding teacher for the early age children. Here is my highlighted experience:</p>
                                     <ul>
                                         <li>Master's dgree in Geo Data Analysis</li>
@@ -182,7 +182,7 @@
                                 <div class="modal-body">
                                     <!-- Project details -->
                                     <h2 class="text-uppercase">Yu Liu</h2>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/team/Yu.jpg" alt="..." style="width: 400px; height: 400px" />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/team/yu.jpg" alt="..." style="width: 400px; height: 400px" />
                                     <p>I have 10+ years experience in the software engineering industry. I am a father of two. I have taught my kids chess, board games, and various card games. Now both of them are quite competitive ingames, and excel in math. I know how to help kids pick up skills and interests quickly. I look forward to helping your kids achieve their software engineer dreams.</p>
                                     <p>Here are my highlighted experience:</p>
                                     <ul>
